--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@react-google-maps/api": "^2.18.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -29,8 +31,7 @@
     "per-env": "^1.0.2",
     "pg": "^8.8.0",
     "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.5.2",
-    "@faker-js/faker": "^7.6.0"
+    "sequelize-cli": "^6.5.2"
   },
   "devDependencies": {
     "dotenv-cli": "^7.0.0",
