--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/NRH-AA/API-Project/issues"
   },
-  "homepage": "https://github.com/NRH-AA/API-Project#readme"
+  "homepage": "https://github.com/NRH-AA/API-Project#readme",
+  "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
+    "react-google-maps": "^9.4.5"
+  }
 }
