--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "dotenv": "^16.0.3",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
+    "react-select-country-list": "^2.2.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "webpack": "^5.81.0",
