--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.321.1",
+    "@aws-sdk/s3-request-presigner": "^3.325.0",
     "@faker-js/faker": "^7.6.0",
+    "aws-sdk": "^2.1369.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -27,6 +30,7 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "per-env": "^1.0.2",
     "pg": "^8.8.0",
     "sequelize": "^6.28.0",
