--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.3",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-bottom-scroll-listener": "^5.1.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
