--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-bottom-scroll-listener": "^5.1.0",
+    "react-calendar": "^4.2.1",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
