--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
+    "react-input-slider": "^6.0.1",
     "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
