--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^2.7.3",
     "react-input-slider": "^6.0.1",
     "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
@@ -27,6 +28,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "remark-gfm": "^3.0.1",
+    "use-places-autocomplete": "^4.0.0",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2"
   },
